# media-server

./: .gitignore  .pre-commit-config.yaml  .prettierrc  .taplo.toml  LICENSE  README.md  all.sh  config.py  example.env  main.py  package-lock.json  package.json  pyproject.toml  run.py  tsconfig.json  vite.config.js  vite.config.ts  vite.config.userscript.js  vite.config.userscript.ts
app/: __init__.py  constants.py
app/models/: download.py
app/schemas/: __init__.py  download.py  execution.py
app/services/: download_service.py  execution_service.py
app/templates/: base.html  dashboard.html
app/utils/: api_response.py  database.py  downloaders.py  gallery_dl.py  log_helpers.py  logger.py  scraper.py  seeder.py  sse.py  tools.py
data/: demo_downloads.py
frontend/css/: dashboard.css  main.css
frontend/js/: apiService.js  baseDataTable.js  constants.js  controllers.js  downloadsTable.js  main.js  modalManager.js  utils.js
frontend/templates/: base.html  dashboard.html
frontend/ts/: apiService.ts  baseDataTable.ts  constants.ts  controllers.ts  downloadsTable.ts  dropdownHelper.ts  main.ts  modalManager.ts  utils.ts
routes/: api.py  media.py
routes/api/: __init__.py  downloads.py  general.py  logging_middleware.py  media.py
routes/main/: __init__.py  routes.py
scripts/: demo_downloads.py  gen_constants.py
src/: constants.py  downloaders.py  logging_middleware.py  models.py
src/models/: download.py
src/services/: download_service.py
src/utils/: database.py  sse.py  tools.py
static/css/: main.css
static/js/: baseDataTable.js  constants.js  dashboard.js  downloadsTable.js
tests/: conftest.py  test_utils.py
tests/api/: test_api.py  test_download_delete.py  test_download_edit.py  test_download_get.py  test_download_media.py  test_log_helpers.py  test_sse.py
tests/frontend/: utils.test.ts
tests/ui/: conftest.py  test_filtering.py  test_integrations.py  test_layout.py  test_render_fields.py  test_sorting.py
tests/utils/: test_api_response.py  test_camel_case_conversions.py  test_scraper.py
userscript/: createDownloadForm.js  createDownloadForm.ts  env.d.ts  main.js  main.ts  utils.js  utils.ts
(+19 files in other folders)
